Added basic html for shop, added placeholder images

--- a/style.css
+++ b/style.css
@@ -58,10 +58,10 @@
 	/*
 	justify-content: center;
 	align-items: center;
-
 	*/
 }
 
 .invis {
-	visibility:hidden
+	display: none;
+	/*visibility:hidden*/
 }
