--- a/style.css
+++ b/style.css
@@ -34,20 +34,46 @@
 }
 
 .card_treasure {
-	/*background-image: ;*/
+	/*background-image: url('res/Gold.png');*/
 	border: chocolate;
     border-style: solid;
 }
 
 .card_victory {
+	/*background-image: url('res/Estate.png');*/
 	border: green;
     border-style: solid;
 }
 
 .card_action {
+	/*background-image: url('res/Laboratory.png');*/
 	border: blue;
     border-style: solid;
 }
+
+.card_treasure .value {
+	position: relative;
+	top: 40%;
+	width: 100%;
+	text-align: center;
+
+	color: black;
+	font-size: 5px;
+
+}
+
+.card_treasure .cost {
+
+}
+/*
+.card_treasure::before {
+	content: '';
+	display: block;
+	width: 100%;
+	height: 100%;
+	background: pink;
+}
+*/
 
 .hand {
 	display: inline-flex;
