Updated stuff, background, css, sortable hands and shop, prep for new images

--- a/style.css
+++ b/style.css
@@ -12,6 +12,14 @@
 	font-size: large;
 }
 
+.big_text {
+	font-size: 16pt;
+}
+
+.biggest_text {
+	font-size: 24pt;
+}
+
 .card {
 	line-height: 45px;
 	height: 228px;
@@ -81,6 +89,10 @@
 }
 */
 
+.inline {
+	display: inline;
+}
+
 .hand {
 	display: inline-flex;
 	flex-flow: row wrap;
@@ -96,8 +108,30 @@
 	margin-bottom: 30px;
 }
 
-.player {
-	background-color: lightgray;
+.margin_bottom_5 {
+	margin-bottom: 5px;
+}
+
+.margin_left {
+	margin-left: 5px;
+}
+
+.strokeme {
+    color: white;
+    text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;  
+}
+
+.strokeme_white {
+    color: black;
+    text-shadow:
+    -1px -1px 0 #FFF,
+    1px -1px 0 #FFF,
+    -1px 1px 0 #FFF,
+    1px 1px 0 #FFF;  
 }
 
 .info {
@@ -110,16 +144,51 @@
 }
 
 .info_stats {
-	background-color: aqua;
+	background-color: darkslateblue;
 	border-style: ;
 	border-color: black;
+}
+
+.shopPanel {
+	display: flex;
+	padding: 5px;
+	margin-right: 5px;
+}
+
+.shopText { /* Make it better aligned to button*/
+	height: 25px;
 }
 
 .normalButton {
 	border: black;
     border-style: solid;
 	height: 25px;
-    width: 100px;	
+    width: 100px;
+    margin-right: 5px;	
+    color: white;
+    text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000; 
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.bigButton {
+	border: black;
+    border-style: solid;
+	height: 35px;
+    width: 50px;
+    margin-right: 5px;	
+    color: white;
+    text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000; 
+    background-color: rgba(0, 0, 0, 0.7);
+    font-weight: bold;
+    font-size: 16pt;
 }
 
 .interactButton {
@@ -127,8 +196,15 @@
     border-style: solid;
 	height: 50px;
     width: 138px;
-    background-color: aqua;
+    background-color: rgba(0, 0, 0, 0.7);
     font-weight: bold;
+    color: white;
+    text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000; 
+
 }
 
 .flex-container {
@@ -141,6 +217,11 @@
 	*/
 }
 
+.playArea {
+	display: flex;
+	flex-direction: column;
+}
+
 .selected {
 	border: yellow;
     border-style: solid;
@@ -148,6 +229,10 @@
 
 .inactive {
 	filter: grayscale(100%);
+}
+
+.outOfStock {
+	opacity: 0.6;
 }
 
 .invis {
