--- a/style.css
+++ b/style.css
@@ -260,6 +260,10 @@
 	margin-top: 2px;
 }
 
+.margin_top_05 {
+	margin-top: 0.5px;
+}
+
 .margin_top_10 {
 	margin-top: 10px;
 }
@@ -270,7 +274,7 @@
 .normalButton {
 	border: black;
     border-style: solid;
-	height: 25px;
+	height: 28px;
     width: 100px;
     margin-right: 5px;	
     color: white;
@@ -305,7 +309,7 @@
     border-width: 4px;
 	height: 50px;
     width: 140px;
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: rgba(0, 0, 0, 0.6);
     font-weight: bold;
     color: white;
     text-shadow:
@@ -315,6 +319,25 @@
     1px 1px 0 #000; 
 
 }
+
+.interactButton:hover {
+	background-color: rgba(0,0,0,0.9);
+	box-shadow: 0px 0px 10px rgba(255,255,100,1);
+	text-shadow: 0px 0px 10px rgba(255,255,100,1);
+}
+
+.normalButton:hover {
+	background-color: rgba(0,0,0,0.9);
+	box-shadow: 0px 0px 10px rgba(255,255,100,1);
+	text-shadow: 0px 0px 10px rgba(255,255,100,1);
+}
+
+.bigButton:hover {
+	background-color: rgba(0,0,0,0.9);
+	box-shadow: 0px 0px 10px rgba(255,255,100,1);
+	text-shadow: 0px 0px 10px rgba(255,255,100,1);
+}
+
 
 /* Reusable 1-liners */
 
